--- a/notebook PT-BR.ipynb
+++ b/notebook PT-BR.ipynb
@@ -1180,6 +1180,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bb5\n",
+      "quarter\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "Cannot convert num: quarter",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[128], line 27\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[38;5;66;03m# Adiciona a duração da nota\u001b[39;00m\n\u001b[0;32m     26\u001b[0m     duracao_em_quarters \u001b[38;5;241m=\u001b[39m duracao\n\u001b[1;32m---> 27\u001b[0m     nota\u001b[38;5;241m.\u001b[39mduration\u001b[38;5;241m.\u001b[39mquarterLength \u001b[38;5;241m=\u001b[39m duracao_em_quarters\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrest\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m elemento:\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;66;03m# Adiciona uma pausa ao compasso\u001b[39;00m\n\u001b[0;32m     30\u001b[0m     duracao \u001b[38;5;241m=\u001b[39m elemento\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m'\u001b[39m)[\u001b[38;5;241m1\u001b[39m]\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\music21\\duration.py:2935\u001b[0m, in \u001b[0;36mDuration._setQuarterLength\u001b[1;34m(self, value)\u001b[0m\n\u001b[0;32m   2931\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_qtrLength \u001b[38;5;241m=\u001b[39m value\n\u001b[0;32m   2932\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_qtrLength \u001b[38;5;241m!=\u001b[39m value\n\u001b[0;32m   2933\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_componentsNeedUpdating  \u001b[38;5;66;03m# skip a type update for next type check\u001b[39;00m\n\u001b[0;32m   2934\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtype \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124minexpressible\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[1;32m-> 2935\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[43mopFrac\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   2936\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m value \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0.0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlinked \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m   2937\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclear()\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\music21\\common\\numberTools.py:358\u001b[0m, in \u001b[0;36mopFrac\u001b[1;34m(num)\u001b[0m\n\u001b[0;32m    356\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m num  \u001b[38;5;66;03m# leave fraction alone\u001b[39;00m\n\u001b[0;32m    357\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 358\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mCannot convert num: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnum\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mTypeError\u001b[0m: Cannot convert num: quarter"
+     ]
+    }
+   ],
+   "source": [
+    "# Adiciona notas e elementos ao compasso\n",
+    "notas_e_elementos = [\n",
+    "    'note-Bb5_quarter', 'note-Eb5_eighth', 'note-Bb5_eighth', 'note-Eb6_eighth',\n",
+    "    'note-Bb5_eighth', 'barline', 'note-Ab5_eighth', 'note-Ab5_eighth',\n",
+    "    'rest-sixteenth', 'note-Ab5_sixteenth', 'note-G5_sixteenth',\n",
+    "    'note-Ab5_sixteenth', 'note-Bb5_sixteenth', 'note-Ab5_sixteenth',\n",
+    "    'note-G5_sixteenth', 'note-Ab5_sixteenth', 'barline'\n",
+    "]\n",
+    "\n",
+    "for elemento in notas_e_elementos:\n",
+    "    if 'note' in elemento:\n",
+    "        # Separa o tipo de nota, a oitava e o acidental\n",
+    "        tipo_nota, oitava_duracao = elemento.split('-')[1].split('_')\n",
+    "        print(tipo_nota)\n",
+    "        altura = tipo_nota[:-1]  # Remove o acidental da altura\n",
+    "        acidental = tipo_nota[-1] if tipo_nota[-1] in ['b', '#'] else None  # Verifica se há um acidental\n",
+    "        print(oitava_duracao.split('_')[0])\n",
+    "\n",
+    "        # Adiciona a nota ao compasso\n",
+    "        nota = note.Note(altura)\n",
+    "        if acidental:\n",
+    "            nota.accidental = pitch.Accidental(acidental)\n",
+    "        compasso.append(nota)\n",
+    "\n",
+    "        # Adiciona a duração da nota\n",
+    "        duracao_em_quarters = duracao\n",
+    "        nota.duration.quarterLength = duracao_em_quarters\n",
+    "    elif 'rest' in elemento:\n",
+    "        # Adiciona uma pausa ao compasso\n",
+    "        duracao = elemento.split('-')[1]\n",
+    "        duracao_em_quarters = duracao\n",
+    "        pausa = note.Rest(quarterLength=duracao_em_quarters)\n",
+    "        compasso.append(pausa)\n",
+    "    elif 'barline' in elemento:\n",
+    "        # Adiciona uma barra de compasso\n",
+    "        compasso.append(bar.Barline())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'exemplo1.mid'"
+      ]
+     },
+     "execution_count": 129,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from music21 import stream, note, meter\n",
+    "\n",
+    "# Cria um objeto Stream para representar a partitura\n",
+    "partitura = stream.Score()\n",
+    "\n",
+    "# Adiciona um compasso à partitura\n",
+    "compasso = stream.Part()\n",
+    "partitura.append(compasso)\n",
+    "\n",
+    "# Adiciona notas ao compasso\n",
+    "notas = ['Bb4', 'D#4', 'E#4', 'F#4', 'G#4', 'A#4', 'B#4', 'C#4']\n",
+    "for nota in notas:\n",
+    "    nota_obj = note.Note(nota, quarterLength=1)\n",
+    "    compasso.append(nota_obj)\n",
+    "\n",
+    "# Define o metro (4/4 neste exemplo)\n",
+    "compasso.append(meter.TimeSignature('4/4'))\n",
+    "\n",
+    "# Salva a partitura em um arquivo em formato MIDI\n",
+    "partitura.write('midi', 'exemplo1.mid')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
